api v3.0.0 - Support Security Groups

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -15,7 +15,6 @@ set_current_group for users https://github.com/ManageIQ/manageiq-api/pull/176
 Mask password attributes from automate_workspaces https://github.com/ManageIQ/manageiq-api/pull/168
 Add decorator for VNS console https://github.com/ManageIQ/manageiq-api/pull/167
 Custom Button CRUD https://github.com/ManageIQ/manageiq-api/pull/140
-Add security group subcollection actions https://github.com/ManageIQ/manageiq-api/pull/137
 Return image_href and extension for pictures https://github.com/ManageIQ/manageiq-api/pull/127
 Return picture href for generic object subcollections https://github.com/ManageIQ/manageiq-api/pull/126
 encrypt/decrypt for Automate Workspace objects https://github.com/ManageIQ/manageiq-api/pull/124
@@ -26,7 +25,6 @@ Search for resources based on href_slug for automate_workspace https://github.co
 Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
 add_providers_vms_action for Services https://github.com/ManageIQ/manageiq-api/pull/100
 set custom attributes on services https://github.com/ManageIQ/manageiq-api/pull/85
-Security group subcollection to providers, cloud tenants and vms https://github.com/ManageIQ/manageiq-api/pull/81
 Alert Definitions adding hash_expression support https://github.com/ManageIQ/manageiq-api/pull/76
 Event streams API https://github.com/ManageIQ/manageiq-api/pull/65
 Update orchestration template subclasses references https://github.com/ManageIQ/manageiq-api/pull/63
@@ -34,6 +32,7 @@ Add/Update/Delete custom attribute for cloud instances https://github.com/Manage
 Allow current group update https://github.com/ManageIQ/manageiq-api/pull/44
 Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+Support Security groups,
 Creating Providers require credentials,
 CRUD for Generic Object Definitions,
 CRUD for Generic Objects,
