api v3.0.0 - Return image_href and extension with pictures

--- a/api/reference/pictures.adoc
+++ b/api/reference/pictures.adoc
@@ -52,18 +52,24 @@ GET /api/pictures?expand=resources
   "resources": [
     {
       "href": "http://localhost:3000/api/pictures/1",
-      "id": "1"
+      "id": "1",
+      "image_href" : "http://localhost:3000/pictures/1.jpg",
+      "extension" : "jpg"
     },
     ...
     {
       "href": "http://localhost:3000/api/pictures/4",
       "id": "4",
+      "image_href" : "http://localhost:3000/pictures/4.png",
+      "extension" : "png",
       "resource_id": "1",
       "resource_type": "ServiceTemplate"
     },
     {
       "href": "http://localhost:3000/api/pictures/5",
-      "id": "5"
+      "id": "5",
+      "image_href" : "http://localhost:3000/pictures/5.jpg",
+      "extension" : "jpg"
     }
   ],
   "actions": [
@@ -105,8 +111,6 @@ GET /api/pictures/4?attributes=binary_blob
 ----
 
 Actually fetching the particular picture is by getting the image by its href.
-
-The image_href of a picture can be queried as follows:
 
 [source,data]
 ----
