api v3.0.0 - Return image href and extension with generic object subcollections pictures

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -15,7 +15,6 @@ set_current_group for users https://github.com/ManageIQ/manageiq-api/pull/176
 Mask password attributes from automate_workspaces https://github.com/ManageIQ/manageiq-api/pull/168
 Add decorator for VNS console https://github.com/ManageIQ/manageiq-api/pull/167
 Custom Button CRUD https://github.com/ManageIQ/manageiq-api/pull/140
-Return picture href for generic object subcollections https://github.com/ManageIQ/manageiq-api/pull/126
 encrypt/decrypt for Automate Workspace objects https://github.com/ManageIQ/manageiq-api/pull/124
 Allow update to request task as a subcollection of request https://github.com/ManageIQ/manageiq-api/pull/117
 Allow service templates to be specified for service orders https://github.com/ManageIQ/manageiq-api/pull/115
@@ -31,6 +30,7 @@ Add/Update/Delete custom attribute for cloud instances https://github.com/Manage
 Allow current group update https://github.com/ManageIQ/manageiq-api/pull/44
 Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+Return picture href for generic object subcollections,
 Return image_href and extensions with Pictures,
 Support Security groups,
 Creating Providers require credentials,
