api v3.0.0 - Deprecated Orchestration Template classes

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -25,11 +25,11 @@ add_providers_vms_action for Services https://github.com/ManageIQ/manageiq-api/p
 set custom attributes on services https://github.com/ManageIQ/manageiq-api/pull/85
 Alert Definitions adding hash_expression support https://github.com/ManageIQ/manageiq-api/pull/76
 Event streams API https://github.com/ManageIQ/manageiq-api/pull/65
-Update orchestration template subclasses references https://github.com/ManageIQ/manageiq-api/pull/63
 Add/Update/Delete custom attribute for cloud instances https://github.com/ManageIQ/manageiq-api/pull/58
 Allow current group update https://github.com/ManageIQ/manageiq-api/pull/44
 Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+Deprecated Orchestration Template classes,
 Return picture href for generic object subcollections,
 Return image_href and extensions with Pictures,
 Support Security groups,
