api v3.0.0 - Support Custom Attributes on Services and Instances

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -6,7 +6,6 @@
 |=======================================================================
 |API Version |Entry Points |Published |Description
 |*3.0.0* |/api, /api/v3.0.0 |January 2018 |
-Validate section values for adding new custom attributes https://github.com/ManageIQ/manageiq-api/pull/240
 Dialog field/tab deletion https://github.com/ManageIQ/manageiq-api/pull/239
 Specify a target and resource when refreshing a dialog field https://github.com/ManageIQ/manageiq-api/pull/233
 Specify a target and resource action when retrieving a service dialog https://github.com/ManageIQ/manageiq-api/pull/231
@@ -22,13 +21,12 @@ Remove equired filters from event streams https://github.com/ManageIQ/manageiq-a
 Search for resources based on href_slug for automate_workspace https://github.com/ManageIQ/manageiq-api/pull/109
 Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
 add_providers_vms_action for Services https://github.com/ManageIQ/manageiq-api/pull/100
-set custom attributes on services https://github.com/ManageIQ/manageiq-api/pull/85
 Alert Definitions adding hash_expression support https://github.com/ManageIQ/manageiq-api/pull/76
 Event streams API https://github.com/ManageIQ/manageiq-api/pull/65
-Add/Update/Delete custom attribute for cloud instances https://github.com/ManageIQ/manageiq-api/pull/58
 Allow current group update https://github.com/ManageIQ/manageiq-api/pull/44
 Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+Support Custom Attributes on Services and Instances,
 Deprecated Orchestration Template classes,
 Return picture href for generic object subcollections,
 Return image_href and extensions with Pictures,
