--- a/doc-Managing_Providers/topics/Enabling_Red_Hat_Virtualization_CU.adoc
+++ b/doc-Managing_Providers/topics/Enabling_Red_Hat_Virtualization_CU.adoc
@@ -9,6 +9,6 @@ Configure the following to collect capacity and utilization data from a Red Hat 
 //https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/deployment_planning_guide/#assigning_the_capacity_and_utilization_server_roles[Assigning the Capacity and Utilization Server Roles]
 
 * In your Red Hat Virtualization environment, install the Data Warehouse and Reports components, and create a {product-title} user in the Data Warehouse database:
-** To install the Data Warehouse and Reports components in a Red Hat Virtualization environment, see the link:https://access.redhat.com/documentation/en/red-hat-virtualization/4.0/paged/installation-guide/[Red Hat Virtualization Installation Guide].
+** To install the Data Warehouse and Reports components in a Red Hat Virtualization environment, see the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1/html/data_warehouse_guide/[Data Warehouse Guide].
 ** To create a {product-title_short} user in the Data Warehouse database, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/deployment_planning_guide/#data_collection_for_rhev_33_34[Data Collection for Red Hat Enterprise Virtualization] in the _Deployment Planning Guide_.
 
