api v3.0.0 - Support set_current_group for authenticated users.

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -10,7 +10,6 @@ Dialog field/tab deletion https://github.com/ManageIQ/manageiq-api/pull/239
 Specify a target and resource when refreshing a dialog field https://github.com/ManageIQ/manageiq-api/pull/233
 Specify a target and resource action when retrieving a service dialog https://github.com/ManageIQ/manageiq-api/pull/231
 Tasks delete support https://github.com/ManageIQ/manageiq-api/pull/220
-set_current_group for users https://github.com/ManageIQ/manageiq-api/pull/176
 Mask password attributes from automate_workspaces https://github.com/ManageIQ/manageiq-api/pull/168
 Add decorator for VNS console https://github.com/ManageIQ/manageiq-api/pull/167
 Custom Button CRUD https://github.com/ManageIQ/manageiq-api/pull/140
@@ -23,9 +22,9 @@ Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
 add_providers_vms_action for Services https://github.com/ManageIQ/manageiq-api/pull/100
 Alert Definitions adding hash_expression support https://github.com/ManageIQ/manageiq-api/pull/76
 Event streams API https://github.com/ManageIQ/manageiq-api/pull/65
-Allow current group update https://github.com/ManageIQ/manageiq-api/pull/44
 Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+Support set_current_group for Users,
 Support Custom Attributes on Services and Instances,
 Deprecated Orchestration Template classes,
 Return picture href for generic object subcollections,
