--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -16,14 +16,13 @@ Custom Button CRUD https://github.com/ManageIQ/manageiq-api/pull/140
 encrypt/decrypt for Automate Workspace objects https://github.com/ManageIQ/manageiq-api/pull/124
 Allow update to request task as a subcollection of request https://github.com/ManageIQ/manageiq-api/pull/117
 Allow service templates to be specified for service orders https://github.com/ManageIQ/manageiq-api/pull/115
-Remove equired filters from event streams https://github.com/ManageIQ/manageiq-api/pull/112
 Search for resources based on href_slug for automate_workspace https://github.com/ManageIQ/manageiq-api/pull/109
 Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
 add_providers_vms_action for Services https://github.com/ManageIQ/manageiq-api/pull/100
 Alert Definitions adding hash_expression support https://github.com/ManageIQ/manageiq-api/pull/76
-Event streams API https://github.com/ManageIQ/manageiq-api/pull/65
 Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+Support Event Streams,
 Support set_current_group for Users,
 Support Custom Attributes on Services and Instances,
 Deprecated Orchestration Template classes,
