api v3.0.0 - Deleting Tasks

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -2,14 +2,13 @@
 [[manageiq-rest-api-version-history]]
 == Version History
 
-[cols="1,1,1,3",options="header"]
+[cols="1,1,1,5",options="header"]
 |=======================================================================
 |API Version |Entry Points |Published |Description
 |*3.0.0* |/api, /api/v3.0.0 |January 2018 |
 Dialog field/tab deletion https://github.com/ManageIQ/manageiq-api/pull/239
 Specify a target and resource when refreshing a dialog field https://github.com/ManageIQ/manageiq-api/pull/233
 Specify a target and resource action when retrieving a service dialog https://github.com/ManageIQ/manageiq-api/pull/231
-Tasks delete support https://github.com/ManageIQ/manageiq-api/pull/220
 Mask password attributes from automate_workspaces https://github.com/ManageIQ/manageiq-api/pull/168
 Add decorator for VNS console https://github.com/ManageIQ/manageiq-api/pull/167
 Custom Button CRUD https://github.com/ManageIQ/manageiq-api/pull/140
@@ -19,9 +18,9 @@ Allow service templates to be specified for service orders https://github.com/Ma
 Search for resources based on href_slug for automate_workspace https://github.com/ManageIQ/manageiq-api/pull/109
 Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
 add_providers_vms_action for Services https://github.com/ManageIQ/manageiq-api/pull/100
-Alert Definitions adding hash_expression support https://github.com/ManageIQ/manageiq-api/pull/76
 Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+Deleting Tasks,
 Support Event Streams,
 Support set_current_group for Users,
 Support Custom Attributes on Services and Instances,
