api v3.0.0 - Support add_provider_vms action on services

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -17,9 +17,9 @@ Allow update to request task as a subcollection of request https://github.com/Ma
 Allow service templates to be specified for service orders https://github.com/ManageIQ/manageiq-api/pull/115
 Search for resources based on href_slug for automate_workspace https://github.com/ManageIQ/manageiq-api/pull/109
 Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
-add_providers_vms_action for Services https://github.com/ManageIQ/manageiq-api/pull/100
 Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+Support add_providers_vms action on Services,
 Deleting Tasks,
 Support Event Streams,
 Support set_current_group for Users,
