--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -14,11 +14,10 @@ Add decorator for VNS console https://github.com/ManageIQ/manageiq-api/pull/167
 Custom Button CRUD https://github.com/ManageIQ/manageiq-api/pull/140
 encrypt/decrypt for Automate Workspace objects https://github.com/ManageIQ/manageiq-api/pull/124
 Allow update to request task as a subcollection of request https://github.com/ManageIQ/manageiq-api/pull/117
-Allow service templates to be specified for service orders https://github.com/ManageIQ/manageiq-api/pull/115
 Search for resources based on href_slug for automate_workspace https://github.com/ManageIQ/manageiq-api/pull/109
 Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
-Send back full dialog on create and edit https://github.com/ManageIQ/manageiq-api/pull/32
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+Return the full dialog upon Service Dialog creates and edits,
 Support add_providers_vms action on Services,
 Deleting Tasks,
 Support Event Streams,
