api v3.0.0 - Support additional VM decorators

--- a/api/reference/service_queries.adoc
+++ b/api/reference/service_queries.adoc
@@ -150,7 +150,9 @@ GET /api/services/:id?expand=vms&attributes=vms.num_cpu
 Accessing decorators for VM resources is also made available here as follows:
 
 ----
-GET /api/services/:id?expand=vms&attributes=vms.num_cpu&decorators=vms.supports_console?
+GET /api/services/:id?expand=vms
+                     &attributes=vms.num_cpu
+                     &decorators=vms.supports_console?,vms.supports_cockpit?,vms.supports_vnc_console?
 ----
 
 [[querying-orchestration-stacks]]
