--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -10,13 +10,13 @@ Dialog field/tab deletion https://github.com/ManageIQ/manageiq-api/pull/239
 Specify a target and resource when refreshing a dialog field https://github.com/ManageIQ/manageiq-api/pull/233
 Specify a target and resource action when retrieving a service dialog https://github.com/ManageIQ/manageiq-api/pull/231
 Mask password attributes from automate_workspaces https://github.com/ManageIQ/manageiq-api/pull/168
-Add decorator for VNS console https://github.com/ManageIQ/manageiq-api/pull/167
 Custom Button CRUD https://github.com/ManageIQ/manageiq-api/pull/140
 encrypt/decrypt for Automate Workspace objects https://github.com/ManageIQ/manageiq-api/pull/124
 Allow update to request task as a subcollection of request https://github.com/ManageIQ/manageiq-api/pull/117
 Search for resources based on href_slug for automate_workspace https://github.com/ManageIQ/manageiq-api/pull/109
 Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+Support additional VM decorators,
 Return the full dialog upon Service Dialog creates and edits,
 Support add_providers_vms action on Services,
 Deleting Tasks,
