added section on hiding environment variables, and screenshot

--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -95,6 +95,9 @@ include::Removing_Containers_Providers.adoc[]
 :leveloffset: 2
 include::Editing_a_Containers_Provider.adoc[]
 
+:leveloffset: 2
+include::Hide_Environment_Vars.adoc[]
+
 
 :leveloffset: 2
 include::Viewing_a_Containers_Providers_Timeline.adoc[]
