--- a/api/reference/provision_requests.adoc
+++ b/api/reference/provision_requests.adoc
@@ -13,6 +13,7 @@ Provisioning requests are made available via the following entrypoint.
 * link:#editing-requests[Editing Requests]
 * link:#approving-denying-requests[Approving or Denying Requests]
 * link:#monitoring-requests[Monitoring Requests]
+* link:#editing-request-tasks[Editing Request Tasks]
 
 
 [[creating-requests]]
@@ -269,6 +270,35 @@ expanding the request_tasks subcollection as follows:
 ----
 GET /api/provision_requests/:id?expand=request_tasks
 ----
+
+or by fetching them directly as follows:
+
+----
+GET /api/provision_requests/:id/request_tasks?expand=resources
+----
+
+[[editing-request-tasks]]
+=== Editing Request Tasks
+
+Request tasks for Provision Requests can be updated as follows:
+
+----
+POST /api/provision_requests/:id/request_tasks/:request_task_id
+----
+
+[source,json]
+----
+{
+  "action" : "edit",
+  "resource" : {
+    "options" : {
+      "request_param_a" : "value_a",
+      "request_param_b" : "value_b"
+    }
+  }
+}
+----
+
 
 For a list of attributes available for the provision request attribute groups
 please refer to the link:../appendices/provision_attributes.html[Provision Request Supported Attributes]
