--- a/api/reference/service_queries.adoc
+++ b/api/reference/service_queries.adoc
@@ -98,7 +98,13 @@ Service dialogs can be queried directly from the primary collection:
 ----
 GET /api/service_dialogs
 GET /api/service_dialogs/:id
+GET /api/service_dialogs/:id?resource_action_id=:ra_id
+                            &target_id=:target_id
+                            &target_type=:target_type
 ----
+
+NOTE: Above :target_type would be a valid resource type containing the service
+dialog like _service_template_ or _service_.
 
 Or from the Service Template where they are defined and from the related ordered services
 as follows:
