--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -6,15 +6,14 @@
 |=======================================================================
 |API Version |Entry Points |Published |Description
 |*3.0.0* |/api, /api/v3.0.0 |January 2018 |
-Dialog field/tab deletion https://github.com/ManageIQ/manageiq-api/pull/239
-Specify a target and resource when refreshing a dialog field https://github.com/ManageIQ/manageiq-api/pull/233
-Specify a target and resource action when retrieving a service dialog https://github.com/ManageIQ/manageiq-api/pull/231
 Mask password attributes from automate_workspaces https://github.com/ManageIQ/manageiq-api/pull/168
 Custom Button CRUD https://github.com/ManageIQ/manageiq-api/pull/140
 encrypt/decrypt for Automate Workspace objects https://github.com/ManageIQ/manageiq-api/pull/124
 Search for resources based on href_slug for automate_workspace https://github.com/ManageIQ/manageiq-api/pull/109
 Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
 calls to fetch and update the Automate Workspace https://github.com/ManageIQ/manageiq-api/pull/21
+Support Service Dialog query parameters,
+Dialog Field Refresh Enhancement,
 Updating request tasks,
 Support additional VM decorators,
 Return the full dialog upon Service Dialog creates and edits,
