api v3.0.0 - Support Automate Workspaces

--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -21,6 +21,7 @@ Where :collection is one of the following:
 |automate | Automate Model
 |automate_domains | Automate Domains
 |automation_requests | Automation Requests
+|automate_workspaces | Automate Workspaces
 |availability_zones | Availability Zones
 |categories | Categories
 |chargebacks | Chargebacks
