--- a/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Integrating_Prometheus_Alerts.adoc
@@ -29,8 +29,10 @@ Configuring and enabling Prometheus alerts in {product-title_short} comprises th
 +
 ----
 $ oc edit configmap -n openshift-metrics prometheus
-# Supported annotations:
+# Supported labels:
 # severity: ERROR|WARNING|INFO. defaults to ERROR.
+# Supported annotations:
+# description: The error message displayed on the screen
 # miqTarget: ContainerNode|ExtManagementSystem, defaults to ContainerNode.
 # miqIgnore: "true|false", should ManageIQ pick up this alert, defaults to true.
   prometheus.rules: |
@@ -44,14 +46,14 @@ $ oc edit configmap -n openshift-metrics prometheus
           miqTarget: "ContainerNode"
           severity: "ERROR"
           url: "https://www.example.com/node_down_fixing_instructions"
-          message: "Node {{$labels.instance}} is down"
+          description: "Node {{$labels.instance}} is down"
       - alert: "TooManyRequests"
         expr: rate(authenticated_user_requests[2m]) > 12
         annotations:
           miqTarget: "ExtManagementSystem"
           severity: "ERROR"
           url: "https://www.example.com/too_many_requests_fixing_instructions"
-          message: "Too many authenticated requests"
+          description: "Too many authenticated requests"
 
 ----
 +
