api v3.0.0 - Support CRUD for Custom Button Sets and Custom Buttons

--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -35,6 +35,8 @@ Where :collection is one of the following:
 |container_deployments | Container Provider Deployment
 |container_projects | Container Projects
 |currencies | Currencies
+|custom_button_sets | Custom Button Sets
+|custom_buttons | Custom Buttons
 |data_stores | Datastores
 |events | Events
 |features | Product Features
