--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -6,8 +6,8 @@
 |=======================================================================
 |API Version |Entry Points |Published |Description
 |*3.0.0* |/api, /api/v3.0.0 |January 2018 |
-Custom Button CRUD https://github.com/ManageIQ/manageiq-api/pull/140
-Custom Button Set CRUD https://github.com/ManageIQ/manageiq-api/pull/101
+CRUD of Custom Button Sets,
+CRUD of Custom Buttons,
 Support Automate Workspaces,
 Support Service Dialog query parameters,
 Dialog Field Refresh Enhancement,
