api v3.0.0 - Fixed up Collection List

--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -15,6 +15,7 @@ Where :collection is one of the following:
 |=============================================================
 |Collection | Description
 |actions | Actions
+|alert_definition_profiles | Alert Definition Profiles
 |alert_definitions | Alert Definitions
 |alerts | Alerts
 |authentications | Authentications
@@ -27,19 +28,23 @@ Where :collection is one of the following:
 |chargebacks | Chargebacks
 |cloud_networks | Cloud Networks
 |cloud_subnets | Cloud Subnets
+|cloud_tenants | Cloud Tenants
 |cloud_volumes | Cloud Volumes
 |clusters | Clusters
 |conditions | Conditions
 |configuration_script_payloads | Configuration Script Payloads
 |configuration_script_sources | Configuration Script Source
 |container_deployments | Container Provider Deployment
+|container_nodes | Container Nodes
 |container_projects | Container Projects
 |currencies | Currencies
 |custom_button_sets | Custom Button Sets
 |custom_buttons | Custom Buttons
 |data_stores | Datastores
+|event_streams | Event Streams
 |events | Events
 |features | Product Features
+|firmwares | Firmwares
 |flavors | Flavors
 |floating_ips | Floating IPs
 |generic_object_definitions | Generic Object Definitions
@@ -50,6 +55,7 @@ Where :collection is one of the following:
 |instances | Instances
 |load_balancers | Load Balancers
 |measures | Measures
+|metric_rollups | Metric Rollups
 |network_routers | Network Routers
 |notifications | User's past notifications
 |orchestration_templates | Orchestration Template
@@ -83,7 +89,6 @@ Where :collection is one of the following:
 |templates | Templates
 |tenants | Tenants
 |users | Users
-|virtual_templates | Virtual Templates
 |vms | Virtual Machines
 |zones | Zones
 |=============================================================
