api v3.0.0 - Removing binary_blob examples for pictures.

--- a/api/reference/pictures.adoc
+++ b/api/reference/pictures.adoc
@@ -82,13 +82,13 @@ GET /api/pictures?expand=resources
 }
 ----
 
-This query does not return the pictures themselves, but primary resources for them.
+This query does not return the pictures themselves, but details about the pictures.
 
-Additional information can be obtained regarding the image binary via the _binary_blob_ attribute:
+Actually fetching the particular picture is by getting the image by its image_href.
 
 [source,data]
 ----
-GET /api/pictures/4?attributes=binary_blob
+GET /api/pictures/4
 ----
 
 [source,json]
@@ -98,41 +98,6 @@ GET /api/pictures/4?attributes=binary_blob
   "id": "4",
   "resource_id": "1",
   "resource_type": "ServiceTemplate",
-  "binary_blob": {
-    "id": "4",
-    "resource_type": "Picture",
-    "resource_id": "4",
-    "md5": "0a38d1998325099141d4c68552440b1d",
-    "size": 68314,
-    "part_size": 1048576,
-    "data_type": "jpg"
-  }
-}
-----
-
-Actually fetching the particular picture is by getting the image by its href.
-
-[source,data]
-----
-GET /api/pictures/4?attributes=binary_blob,image_href
-----
-
-[source,json]
-----
-{
-  "href": "http://localhost:3000/api/pictures/4",
-  "id": "4",
-  "resource_id": "1",
-  "resource_type": "ServiceTemplate",
-  "binary_blob": {
-    "id": "4",
-    "resource_type": "Picture",
-    "resource_id": "4",
-    "md5": "0a38d1998325099141d4c68552440b1d",
-    "size": 68314,
-    "part_size": 1048576,
-    "data_type": "jpg"
-  },
   "image_href": "http://localhost:3000/pictures/4.jpg"
 }
 ----
