--- a/common/openstack/adding-an-openstack-cloud-provider.adoc
+++ b/common/openstack/adding-an-openstack-cloud-provider.adoc
@@ -36,10 +36,15 @@ To authenticate the provider using a self-signed Certificate Authority (CA), con
 If you select `Keystone v3`, enter the `Keystone V3 Domain ID` that {product-title} should use. This is the domain of the user account you will be specifying later in the *Default* tab. If domains are not configured in the provider, enter *default*.
 +
 [NOTE]
+====
+Keystone API v3 is required to create cloud tenants on OpenStack cloud providers.
+====
++
+[NOTE]
 =========
 include::osp-keystone-api-v3.adoc[]
 =========
-
++
 . By default, _tenant mapping_ is disabled. To enable it, set *Tenant Mapping Enabled* to *Yes*.
 
 . Select the appropriate *Zone* for the provider. By default, the zone is set to *default*.
