Fixed a reference to delete.png in the Monitoring, Reports, and Alerting guide.

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_Report_Menu_Accordions.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_Report_Menu_Accordions.adoc
@@ -10,7 +10,7 @@
 * Click  image:moveUp.png[] *(Move selected folder up)* to move the folder up.
 * Click  image:moveDown.png[] *(Move selected folder down)* to move the folder down.
 * Click  image:moveToBottom.png[] *(Move selected folder to bottom)* to move the folder to the bottom of the list.
-* Click  image:delete-.png[] *(Delete selected folder and its contents)* to delete a folder.
+* Click  image:delete.png[] *(Delete selected folder and its contents)* to delete a folder.
 * Click  image:add.png[] *(Add folder to selected folder)* to add an folder.
 +
 NOTE: If you are creating a new folder, *Top Level* must be selected under *Reports*. Be sure to select the folder you want to create a subfolder for on the left pane. To name the folder, double-click on *New Folder*, then click on *Top Level* in the *Reports* area.
