api v3.0.0 - typos/english/asciibinder warnings

--- a/api/overview/paging.adoc
+++ b/api/overview/paging.adoc
@@ -74,6 +74,6 @@ the result will be limited to the first max_results_per_page resources.
 
 If the default value for max_results_per_page does not meet your needs, It can be changed using 
 the Advanced Settings feature in the UI. It is recommended however that it is not set to some arbitrarily large
-number in an effort to circumvent the paging feature - it is designed to prevent excessive load, and certainly
-requesting millions of records which is easy to do with the metric rollups/event streams APIs.
+number in an effort to circumvent the paging feature. The paging feature is designed to prevent excessive
+load, and certainly requesting millions of records which is easy to do with the metric rollups/event streams APIs.
 ====
