--- a/api/reference/automate_workspaces.adoc
+++ b/api/reference/automate_workspaces.adoc
@@ -15,7 +15,7 @@ Management of Automate Workspaces is provided with the following collection:
 - link:#decypting-automate-workspace-passwords[Decrypting Automate Workspace Passwords]
 
 [[querying-automate-workspaces]]
-==== Querying Automate Workspaces
+=== Querying Automate Workspaces
 
 It is not allowed to query the automate workspace collection, only individual
 automate workspaces can be fetched by guid.
@@ -26,13 +26,13 @@ GET /api/automate_workspaces/:guid
 
 Example GET Request and Response:
 
-===== Request:
+==== Request:
 
 ----
 GET /api/automate_workspaces/430a66a0-b564-4341-b9b2-85d6f467f26f
 ----
 
-===== Response:
+==== Response:
 
 [source,json]
 ----
@@ -74,7 +74,7 @@ GET /api/automate_workspaces/430a66a0-b564-4341-b9b2-85d6f467f26f
 ----
 
 [[editing-automate-workspaces]]
-==== Editing Automate Workspaces
+=== Editing Automate Workspaces
 
 Updating Automate Workspaces can be done via the _edit_ action as follows:
 
@@ -99,11 +99,11 @@ POST /api/automate_workspaces/:guid
 
 
 [[encrypting-automate-workspace-passwords]]
-==== Encrypting Automate Workspace Passwords
+=== Encrypting Automate Workspace Passwords
 
 Encrypting passwords in the automate workspace can be done as follows:
 
-===== Request:
+==== Request:
 
 [source,data]
 ----
@@ -122,7 +122,7 @@ POST /api/automate_workspaces/:guid
 }
 ----
 
-===== Response:
+==== Response:
 
 [source,json]
 ----
@@ -148,11 +148,11 @@ POST /api/automate_workspaces/:guid
 ----
 
 [[decypting-automate-workspace-passwords]]
-==== Decrypting Automate Workspace Passwords
+=== Decrypting Automate Workspace Passwords
 
 Encrypted passwords in the automate workspace can be decrypted individually as follows:
 
-===== Request:
+==== Request:
 
 [source,data]
 ----
@@ -170,7 +170,7 @@ POST /api/automate_workspaces/:guid
 }
 ----
 
-===== Response:
+==== Response:
 
 [source,json]
 ----
