--- a/api/reference/configuration_script_sources.adoc
+++ b/api/reference/configuration_script_sources.adoc
@@ -162,6 +162,8 @@ POST /api/configuration_script_sources
 
 Example:
 
+=== Request:
+
 ----
 POST /api/configuration_script_sources/101
 ----
@@ -173,7 +175,7 @@ POST /api/configuration_script_sources/101
 }
 ----
 
-Response:
+=== Response:
 
 [source,json]
 ----
