--- a/api/reference/event_streams.adoc
+++ b/api/reference/event_streams.adoc
@@ -34,14 +34,14 @@ Relevant filter[] parameters when Event Streams are queried:
 | target_id | target_id=11
 |======================
 
-==== Filtering by event type
+=== Filtering by event type
 
 [source,data]
 ----
 GET /api/event_streams?filter[]=event_type=vm_start
 ----
 
-==== Filtering by timestamp
+=== Filtering by timestamp
 
 [source,data]
 ----
@@ -49,14 +49,14 @@ GET /api/event_streams?filter[]=timestamp>2017-01-03
                       &filter[]=timestamp<2017-01-10
 ----
 
-==== Filtering by target type
+=== Filtering by target type
 
 [source,data]
 ----
 GET /api/event_streams?filter[]=target_type=VmOrTemplate
 ----
 
-==== Filtering by target type and id
+=== Filtering by target type and id
 
 [source,data]
 ----
