--- a/api/reference/flavors.adoc
+++ b/api/reference/flavors.adoc
@@ -64,7 +64,7 @@ POST /api/providers/:id/flavors
   "name" : "base-system",
   "cpu_cores" : 2,
   "memory" :  4096000000,
-  "root_disk_size" : 16384000000,
+  "root_disk_size" : 16384000000
 }
 ----
 
