--- a/api/reference/generic_objects.adoc
+++ b/api/reference/generic_objects.adoc
@@ -532,7 +532,7 @@ POST /api/generic_objects
 }
 ----
 
-Generic Objects can also be directly created of a specific Generic Object Definition type
+Generic Objects can also be directly created for a specific Generic Object Definition type
 as follows:
 
 [source,data]
