--- a/api/reference/pictures.adoc
+++ b/api/reference/pictures.adoc
@@ -82,7 +82,7 @@ GET /api/pictures?expand=resources
 }
 ----
 
-This query does not return the pictures themselves, but details about the pictures.
+This query does not return the pictures themselves, simply metadata about the pictures.
 
 Actually fetching the particular picture is by getting the image by its image_href.
 
