--- a/api/reference/provision_requests.adoc
+++ b/api/reference/provision_requests.adoc
@@ -85,7 +85,7 @@ Example: Store a request_id from an external system so the system can be notifie
 [[editing-requests]]
 === Editing Requests
 
-Updating requests can be performed by posting an _edit_ action as follows:
+Updating provision requests can be performed by posting an _edit_ action as follows:
 
 [source,data]
 ----
