--- a/api/reference/tasks.adoc
+++ b/api/reference/tasks.adoc
@@ -18,7 +18,7 @@ Querying all Takss:
 GET /api/tasks
 ----
 
-Getting details on a specific Task:
+Getting details of a specific Task:
 
 ----
 GET /api/tasks/:id
@@ -31,7 +31,7 @@ The following actions are available on tasks:
 [[deleting-tasks]]
 === Deleting Tasks
 
-Tasks can be deleted via either the *delete* POST action or via the DELETE HTTP method.
+Tasks can be deleted via either the *delete* POST action or the DELETE HTTP method.
 
 ----
 POST /api/tasks/101
