--- a/api/reference/users.adoc
+++ b/api/reference/users.adoc
@@ -155,7 +155,7 @@ POST /api/users/:id
 
 [NOTE]
 =====
-The group reference can be via *description*, *href*, or *id*. Also, only a group that
+The group reference can be via *description*, *href* or *id*. Also, only a group that
 the user belongs to can be specified.
 =====
 
