--- a/api/reference/cloud_volumes.adoc
+++ b/api/reference/cloud_volumes.adoc
@@ -23,7 +23,7 @@ Querying all cloud volumes in the system is simply:
 GET /api/cloud_volumes
 ----
 
-Getting details on a specific Cloud Volume:
+And getting details of a specific Cloud Volume as follows:
 
 ----
 GET /api/cloud_volumes/:id
