--- a/api/reference/metric_rollups.adoc
+++ b/api/reference/metric_rollups.adoc
@@ -21,7 +21,7 @@ Supported query parameters:
 | end_date | 2018-01-17,  2017-12-31T23:59:00Z
 |======================
 
-==== Getting 60 Daily Metric Rollups
+=== Getting 60 Daily Metric Rollups
 
 [source,data]
 ----
@@ -32,7 +32,7 @@ GET /api/metric_rollups?resource_type=VmOrTemplate
                       &limit=60
 ----
 
-==== Getting Hourly Metric Rollups for a range of Dates
+=== Getting Hourly Metric Rollups for a range of Dates
 
 [source,data]
 ----
@@ -55,7 +55,7 @@ Metric rollups can also be obtained for a specific resource as a subcollection:
 /api/services/:id/metric_rollups
 ----
 
-==== Getting Hourly Metric Rollups for a Service
+=== Getting Hourly Metric Rollups for a Service
 
 [source,data]
 ----
@@ -63,10 +63,10 @@ GET /api/services/57/metric_rollups?capture_interval=hourly&start_date='2017-06-
 ----
 
 
-==== Getting 30 Daily Metric Rollups for a Vm
+=== Getting 30 Daily Metric Rollups for a Vm
 
 [source,data]
 ----
-GET /api/vms/104/metric_rollups?capture_interval=daily&start_date='2017-01-01'
+GET /api/vms/104/metric_rollups?capture_interval=daily&start_date='2017-01-01'&limit=30
 ----
 
