api v3.0.0 - Settings Management

--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -6,6 +6,7 @@
 |=======================================================================
 |API Version |Entry Points |Published |Description
 |*3.0.0* |/api, /api/v3.0.0 |January 2018 |
+Settings Management,
 CRUD of Custom Button Sets,
 CRUD of Custom Buttons,
 Support Automate Workspaces,
