Minor peer review edit
Per IBM style guide

--- a/doc-Managing_Providers/topics/Hide_Environment_Vars.adoc
+++ b/doc-Managing_Providers/topics/Hide_Environment_Vars.adoc
@@ -21,7 +21,7 @@ Alternatively, to create a new custom role, select a role from the *Access Contr
 . Edit the name for the role if desired.
 . Select *None*, *Only User or Group Owned*, or *Only User Owned* from *Access Restriction for Services, VMs, and Templates*. 
 . Expand the *Product Features (Editing)* tree options to show menu:Everything[Compute > Containers > Containers Explorer > All Containers > View Containers].
-. Uncheck the *Environment Variables* checkbox to restrict the user role from viewing container environment variables.
+. Clear the *Environment Variables* checkbox to restrict the user role from viewing container environment variables.
 +
 image:restrict_env_vars.png[]
 +
