Peer review edit
Changed Add to Save per screen capture.

--- a/doc-Managing_Providers/topics/Hide_Environment_Vars.adoc
+++ b/doc-Managing_Providers/topics/Hide_Environment_Vars.adoc
@@ -25,6 +25,6 @@ Alternatively, to create a new custom role, select a role from the *Access Contr
 +
 image:restrict_env_vars.png[]
 +
-. Click *Add*.
+. Click *Save*.
 
 For more information about user roles, see  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/general_configuration/#roles[Roles] in _General Configuration_.
