Documented a new procedure to add/resume containers providers

--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -93,7 +93,12 @@ include::Removing_Containers_Providers.adoc[]
 
 
 :leveloffset: 2
+include::Pause_Resume_Containers_Providers.adoc[]
+
+
+:leveloffset: 2
 include::Editing_a_Containers_Provider.adoc[]
+
 
 :leveloffset: 2
 include::Hide_Environment_Vars.adoc[]
