--- a/doc-Managing_Providers/topics/Pause_Resume_Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Pause_Resume_Containers_Providers.adoc
@@ -1,10 +1,12 @@
-= Pausing and Resuming Containers Providers
+= Pausing / Resuming Containers Providers
 
-{product-title_short} has the ability to pause and resume containers providers. This allows users to add a number of potentially resource-intensive providers, then pause and resume those that are not required at a given time. Besides, in the case of some scheduled maintainance of the provider, users may want to pause a provider to ensure {product-title_short} does not try to connect to collect data and generate log errors or collect partial data.
+{product-title_short} has the ability to pause and resume containers providers. This allows users to add a number of potentially resource-intensive providers, then pause and resume those that are not required at a given time. Besides, in case of any maintainance of the provider, users may want to pause a provider to ensure {product-title_short} does not try to connect to collect data and generate log errors or collect partial data.
 
-[WARNING]
+[NOTE]
 ====
-While the provider is paused no data will be collected from it. This may cause gaps in inventory, metrics and events.
+* While the provider is paused no data will be collected from it. This may cause gaps in inventory, metrics and events. 
+
+* Also, the provider itself is not turned off when paused, but only temporarily disables the link between {product-title_short} and the provider. Resuming the provider re-enables the link between {product-title_short} and the provider.
 ====
 
 To pause a containers provider:
@@ -18,6 +20,6 @@ To pause a containers provider:
 To resume a paused containers provider:
 
 . Navigate to menu:Compute[Containers > Providers].
-. Click any paused containers provider that you want to resume.
+. Click the paused containers provider that you want to resume.
 . Click  image:1847.png[Configuration] (*Configuration*), and then  image:resume-containers-provider.png[Resume this Containers Provider] (*Resume this Containers Provider*).
 . Click *OK*.
