Applied peer review suggestions.

--- a/doc-Managing_Providers/topics/Pause_Resume_Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Pause_Resume_Containers_Providers.adoc
@@ -1,6 +1,6 @@
 = Pausing / Resuming Containers Providers
 
-{product-title_short} has the ability to pause and resume containers providers. This allows users to add a number of potentially resource-intensive providers, then pause and resume those that are not required at a given time. Besides, in case of any maintainance of the provider, users may want to pause a provider to ensure {product-title_short} does not try to connect to collect data and generate log errors or collect partial data.
+In {product-title_short}, you can pause and resume containers providers. This allows users to add a number of potentially resource-intensive providers, then pause and resume those that are not required at a given time. Besides, when performing maintenance on a provider, you can pause the provider to prevent {product-title_short} from connecting to it, to avoid generating log errors or collecting partial data.
 
 [NOTE]
 ====
