conditionalized the links to the cloudforms auth guide for now

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -731,11 +731,12 @@ image:2066.png[]
 
 Use the *Authentication* tab to specify how you want users authenticated on the console. You can use the VMDB or integrate with LDAP, LDAPS, Amazon, or an external IPA server.
 
+ifdef::cfme[]
 [NOTE]
 ====
 See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/managing_authentication_for_cloudforms/[_Managing Authentication_] for information on configuring different types of authentication for {product-title_short}.
 ====
-
+endif::cfme[]
 
 
 [[changing-authentication-settings]]
@@ -2090,8 +2091,9 @@ image:available_groups.png[]
 ====
 * If you are using LDAP, but did not enable *Get User Groups from LDAP* in your server's *Authentication* tab, you will need to define a user. The UserID must match exactly the user's name as defined in your directory service. Use all lowercase characters to ensure the user can be found in the VMDB.
 * When the user logs in, they use their LDAP password.
+ifdef::cfme[]
 * For more information on configuring LDAP authentication in {product-title_short}, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/managing_authentication_for_cloudforms/#ldap_config[Configuring LDAP or LDAPS Authentication] in _Managing Authentication_.
-====
+endif::cfme[]
 ====
 +
 . Select one or more groups from *Available Groups*.
@@ -2117,10 +2119,12 @@ For a list of what each pre-defined account role can do, see xref:roles[].
 
 A user can exist in multiple groups. However, a group can only be assigned one account role.
 
+ifdef::cfme[]
 [NOTE]
 ====
 See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/managing_authentication_for_cloudforms/#assigning_account_roles_using_ldap_groups[Assigning CloudForms Account Roles Using LDAP Groups] in _Managing Authentication_.
 ====
+endif::cfme[]
 
 [[creating-a-user-group]]
 ==== Creating a Group
@@ -2160,7 +2164,10 @@ A group can only be assigned one role when the local database is used for authen
 
 [NOTE]
 ====
-If you have enabled *Get Role from LDAP* under *LDAP Settings*, then the role is determined by the LDAP user's group membership in the directory service. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/managing_authentication_for_cloudforms/#ldap_config[Configuring LDAP or LDAPS Authentication] in _Managing Authentication_.
+If you have enabled *Get Role from LDAP* under *LDAP Settings*, then the role is determined by the LDAP user's group membership in the directory service. 
+ifdef::cfme[]
+See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/managing_authentication_for_cloudforms/#ldap_config[Configuring LDAP or LDAPS Authentication] in _Managing Authentication_.
+endif::cfme[]
 ====
 
 To view details of a role and its level of access:
