--- a/doc-Managing_Providers/topics/Pause_Resume_Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Pause_Resume_Containers_Providers.adoc
@@ -1,6 +1,6 @@
 = Pausing / Resuming Containers Providers
 
-In {product-title_short}, you can pause and resume containers providers. This allows users to add a number of potentially resource-intensive providers, then pause and resume those that are not required at a given time. Besides, when performing maintenance on a provider, you can pause the provider to prevent {product-title_short} from connecting to it, to avoid generating log errors or collecting partial data.
+In {product-title_short}, you can pause and resume containers providers. This allows users to add a number of potentially resource-intensive providers, then pause and resume those that are not required at a given time. Additionally, when performing maintenance on a provider, you can pause the provider to prevent {product-title_short} from connecting to it, to avoid generating log errors or collecting partial data.
 
 [NOTE]
 ====
