add new content on writing playbooks and service linking

--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -105,6 +105,7 @@ If both {product-title_short} and a VMware provider are located in the same IPv6
 . Click *Add*.
 
 
+include::Optimizing_Playbooks.adoc[]
 
 [[ansible-tower]]
 == Ansible Tower
